--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,35 @@ canvas {
 }
 .scorebar {
   position: absolute;
-  width: 100%;
+  width: 95%;
+  margin-left: 2.5%; 
   background-color: rgba(163, 165, 168, 0.5);
   display: flex;
   justify-content: space-around;
   font-size: 1.5rem;
+}
+.game-instructions, .end-game{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60%;
+  width: 50%;
+  background-color: white;
+  margin-left: 25%;
+  margin-top: 15%;
+  border-radius: 5px;
+}
+.start-button {
+  font-size: 1rem;
+  width: 50%;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: aliceblue;
+  cursor: pointer;
+}
+
+.no-show{
+  display: none;
 }
